--- a/Week2/MDF1-wk2/MDF1-wk2/MDF1-wk2-Info.plist
+++ b/Week2/MDF1-wk2/MDF1-wk2/MDF1-wk2-Info.plist
@@ -8,21 +8,8 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
-	<key>CFBundleIcons</key>
-	<dict>
-		<key>CFBundlePrimaryIcon</key>
-		<dict>
-			<key>CFBundleIconFiles</key>
-			<array>
-				<string>icon.png</string>
-				<string>icon@2x.png</string>
-				<string>Default@2x.png</string>
-				<string>Default.png</string>
-			</array>
-		</dict>
-	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.fullsail.testApp</string>
+	<string>com.fullsail.appTest.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
