--- a/Week2/MDF1-wk2/MDF1-wk2/MDF1-wk2-Info.plist
+++ b/Week2/MDF1-wk2/MDF1-wk2/MDF1-wk2-Info.plist
@@ -22,7 +22,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.fullsail.appTest.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.fullsail.testApp</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
